--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ timezone: Asia/Shanghai
 
 title: Chirpy # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: "I am a Master's Student in Information Systems at KAIST"
+# it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
