Add Sass configuration for compressed style
Signed-off-by: JaneS1028 <janeshin@kaist.ac.kr>

--- a/_config.yml
+++ b/_config.yml
@@ -219,3 +219,10 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+
+sass:
+  style: compressed
+include:
+  - _sass/custom.scss
+
