--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Seoul
 
 title: Jane Shin # the main title
 
-tagline: "I am a Master's Student in Information Systems at KAIST"
+tagline: "Master's Student in Information Systems at KAIST"
 # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
